Fixed: request specific amount for dark mode

--- a/src/pages/add/copayers/copayers.scss
+++ b/src/pages/add/copayers/copayers.scss
@@ -6,6 +6,7 @@ page-copayers {
   }
   .copayers-header {
     width: 100%;
+    margin-bottom: 10px;
     &-content {
       padding: 0 2rem;
       .title {
