--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -1313,21 +1313,14 @@
     }
   }
   page-custom-amount {
-    .scroll-content {
-      background-color: $bg-color-dark-theme-2;
-      margin-top: 0rem;
-      .wrapper {
-        display: flex;
-        flex-direction: column;
-        background-color: white;
-      }
+    .qr-card-amount {
+      background-color: $bg-color-dark-theme;
     }
-
     .qr-container {
-      background-color: $bg-color-dark-theme-2;
+      background-color: $bg-color-dark-theme;
 
       div.qr-card.card {
-        background-color: $bg-color-dark-theme-2;
+        background-color: $bg-color-dark-theme;
       }
       .qr-card {
         background-color: white;
